fixed bug of the signup/login forms on ie8

--- a/public/stylesheets/ie8.css
+++ b/public/stylesheets/ie8.css
@@ -1,2 +1,2 @@
-.over-form{display: block; }
+.ie8-hide{display: block; padding: 0; height: 0; overflow: hidden;}
 .only-3-values{padding: 0 119px;}
